sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * Heap-allocated transform builder for FFI use.
 */
typedef struct FfiTransform2DBuilder {
    /**
     * The transform being built.
     */
    struct FfiTransform2D transform;
} FfiTransform2DBuilder;
/**
 * FFI-safe Mat3x3 representation (9 floats in column-major order).
 */
typedef struct FfiMat3x3 {
    /**
     * Matrix elements in column-major order.
     */
    float m[9];
} FfiMat3x3;
/* === Transform2D === */

/**
 * Creates a new transform builder with default values.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_new(void);
/**
 * Creates a new transform builder at a specific position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_at_position(float x, float y);
/**
 * Sets the position on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_position(struct FfiTransform2DBuilder *builder, float x, float y);
/**
 * Sets the rotation (in radians) on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_rotation(struct FfiTransform2DBuilder *builder, float rotation);
/**
 * Sets the rotation (in degrees) on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_rotation_degrees(struct FfiTransform2DBuilder *builder, float degrees);
/**
 * Sets the scale on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_scale(struct FfiTransform2DBuilder *builder, float scale_x, float scale_y);
/**
 * Sets uniform scale on the builder.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_with_scale_uniform(struct FfiTransform2DBuilder *builder, float scale);
/**
 * Makes the builder's transform look at a target position.
 */
struct FfiTransform2DBuilder *goud_transform2d_builder_looking_at(struct FfiTransform2DBuilder *builder, float target_x, float target_y);
/**
 * Builds and consumes the transform builder, returning the final transform.
 */
struct FfiTransform2D goud_transform2d_builder_build(struct FfiTransform2DBuilder *builder);
/**
 * Frees a transform builder without building.
 */
void goud_transform2d_builder_free(struct FfiTransform2DBuilder *builder);
/**
 * Computes the inverse transformation matrix.
 */
struct FfiMat3x3 goud_transform2d_matrix_inverse(const struct FfiTransform2D *transform);
/**
 * Transforms a point from local space to world space.
 */
struct FfiVec2 goud_transform2d_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Transforms a direction from local space to world space.
 */
struct FfiVec2 goud_transform2d_transform_direction(const struct FfiTransform2D *transform, float dir_x, float dir_y);
/**
 * Transforms a point from world space to local space.
 */
struct FfiVec2 goud_transform2d_inverse_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Transforms a direction from world space to local space.
 */
struct FfiVec2 goud_transform2d_inverse_transform_direction(const struct FfiTransform2D *transform, float dir_x, float dir_y);
/**
 * Linearly interpolates between two transforms.
 */
struct FfiTransform2D goud_transform2d_lerp(struct FfiTransform2D from, struct FfiTransform2D to, float t);
/**
 * Normalizes an angle to the range [-PI, PI).
 */
float goud_transform2d_normalize_angle(float angle);