sdks/csharp/NativeMethods.g.cs


        /// <summary>
        ///  Computes the inverse transformation matrix.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform to read
        ///
        ///  # Returns
        ///
        ///  The inverse transformation matrix in column-major order.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_matrix_inverse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiMat3x3 goud_transform2d_matrix_inverse(FfiTransform2D* transform);

        /// <summary>
        ///  Transforms a point from local space to world space.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform
        ///  - `point_x`: X coordinate of the point in local space
        ///  - `point_y`: Y coordinate of the point in local space
        ///
        ///  # Returns
        ///
        ///  The point transformed to world space.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_transform_point", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_transform_point(FfiTransform2D* transform, float point_x, float point_y);

        /// <summary>
        ///  Transforms a direction from local space to world space.
        ///
        ///  Unlike points, directions are not affected by translation.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform
        ///  - `dir_x`: X component of the direction in local space
        ///  - `dir_y`: Y component of the direction in local space
        ///
        ///  # Returns
        ///
        ///  The direction transformed to world space.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_transform_direction", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_transform_direction(FfiTransform2D* transform, float dir_x, float dir_y);

        /// <summary>
        ///  Transforms a point from world space to local space.
        ///
        ///  # Parameters
        ///
        ///  - `transform`: Pointer to the transform
        ///  - `point_x`: X coordinate of the point in world space
        ///  - `point_y`: Y coordinate of the point in world space
        ///
        ///  # Returns
        ///
        ///  The point transformed to local space.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_inverse_transform_point", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_inverse_transform_point(FfiTransform2D* transform, float point_x, float point_y);

        /// <summary>
        ///  Transforms a direction from world space to local space.
        ///
        ///  # Safety
        ///
        ///  - `transform` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_inverse_transform_direction", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_transform2d_inverse_transform_direction(FfiTransform2D* transform, float dir_x, float dir_y);

        /// <summary>
        ///  Linearly interpolates between two transforms.
        ///
        ///  Position and scale are linearly interpolated, rotation uses
        ///  shortest-path angle interpolation.
        ///
        ///  # Parameters
        ///
        ///  - `from`: The starting transform
        ///  - `to`: The ending transform
        ///  - `t`: Interpolation factor (0.0 = from, 1.0 = to)
        ///
        ///  # Returns
        ///
        ///  The interpolated transform.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_lerp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2D goud_transform2d_lerp(FfiTransform2D from, FfiTransform2D to, float t);

        /// <summary>
        ///  Normalizes an angle to the range [-PI, PI).
        ///
        ///  # Parameters
        ///
        ///  - `angle`: The angle in radians to normalize
        ///
        ///  # Returns
        ///
        ///  The normalized angle in the range [-PI, PI).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_normalize_angle", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float goud_transform2d_normalize_angle(float angle);

        /// <summary>
        ///  Creates a new transform builder with default values.
        ///
        ///  The builder is heap-allocated and must be either:
        ///  - Consumed with `goud_transform2d_builder_build()`, or
        ///  - Freed with `goud_transform2d_builder_free()`
        ///
        ///  # Returns
        ///
        ///  A pointer to a new FfiTransform2DBuilder, or null if allocation fails.
        ///
        ///  # Safety
        ///
        ///  The returned pointer must be managed by the caller.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_new();

        /// <summary>
        ///  Creates a new transform builder at a specific position.
        ///
        ///  # Parameters
        ///
        ///  - `x`: X position in world space
        ///  - `y`: Y position in world space
        ///
        ///  # Returns
        ///
        ///  A pointer to a new FfiTransform2DBuilder.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_at_position", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_at_position(float x, float y);

        /// <summary>
        ///  Sets the position on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `x`: X position in world space
        ///  - `y`: Y position in world space
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_with_position", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_with_position(FfiTransform2DBuilder* builder, float x, float y);

        /// <summary>
        ///  Sets the rotation (in radians) on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `rotation`: Rotation angle in radians (counter-clockwise)
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_with_rotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_with_rotation(FfiTransform2DBuilder* builder, float rotation);

        /// <summary>
        ///  Sets the rotation (in degrees) on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `degrees`: Rotation angle in degrees (counter-clockwise)
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_with_rotation_degrees", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_with_rotation_degrees(FfiTransform2DBuilder* builder, float degrees);

        /// <summary>
        ///  Sets the scale on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `scale_x`: Scale along X axis
        ///  - `scale_y`: Scale along Y axis
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_with_scale", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_with_scale(FfiTransform2DBuilder* builder, float scale_x, float scale_y);

        /// <summary>
        ///  Sets uniform scale on the builder.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `scale`: Uniform scale factor for both axes
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_with_scale_uniform", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_with_scale_uniform(FfiTransform2DBuilder* builder, float scale);

        /// <summary>
        ///  Makes the builder's transform look at a target position.
        ///
        ///  Sets the rotation so the forward direction points at the target.
        ///
        ///  # Parameters
        ///
        ///  - `builder`: Pointer to the builder
        ///  - `target_x`: X position of the target
        ///  - `target_y`: Y position of the target
        ///
        ///  # Returns
        ///
        ///  The same builder pointer for chaining.
        ///
        ///  # Safety
        ///
        ///  - `builder` must be a valid pointer from `goud_transform2d_builder_new()` or null
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_transform2d_builder_looking_at", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiTransform2DBuilder* goud_transform2d_builder_looking_at(FfiTransform2DBuilder* builder, float target_x, float target_y);
